--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="footer" class="panel">
   <div class="panel-footer">
 	<div class="container-fluid">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-sm-4">
 				<p>{{ site.title }}</p>
 				<img class="img-fluid" src="{{ site.baseurl }}/images/logo/lab-logo.png"
@@ -22,7 +22,7 @@
 				<p>Contact</p>
 				<p>Some Address</p>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="row mt-3">
 			<p class="text-center">Copyright, 2019</p>
