--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -56,14 +56,14 @@ layout: default
     </div>
 
     <!-- Education -->
-    <div class="row">
+    <!-- <div class="row">
         <h3>Education</h3>
         <ul class="list-unstyled">
             {% for education in page.education %}
                 <li>{{education}}</li>
             {% endfor %}
         </ul>
-    </div>
+    </div> -->
 
     <!-- Bio -->
     <div class="row">
