--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,15 +3,13 @@ layout: default
 ---
 
 <div id="homeid" class="col-sm-8 ml-0 nopadding-left">
-	<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover" >
-		<!-- Menu -->
+	<!-- <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover" >
 		<ol class="carousel-indicators">
 			<li data-target="#carousel" data-slide-to="0" class="active"></li>
 			<li data-target="#carousel" data-slide-to="1"></li>
 			<li data-target="#carousel" data-slide-to="1"></li>
 		</ol>
 
-		<!-- Items -->
 		<div class="carousel-inner" markdown="0">
 			<div class="item active">
 				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/slider-image.png" alt="Slide 1" />
@@ -31,11 +29,11 @@ layout: default
 		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 		<span class="sr-only">Next</span>
 		</a>
-	</div>
+	</div> -->
 
 	{{ content }}
 </div>
 
 <div id="newsid" class="col-sm-4 nopadding-right" >
-	{% include tweets.html %}
+	{% include news.html %}
 </div>
