--- a/_sass/bootstrap/_panels.scss
+++ b/_sass/bootstrap/_panels.scss
@@ -8,6 +8,7 @@
   margin-bottom: $line-height-computed;
   background-color: $panel-bg;
   border: 1px solid transparent;
+  border-color: #13294B;
   border-radius: $panel-border-radius;
   @include box-shadow(0 1px 1px rgba(0,0,0,.05));
 }
