--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -35,5 +35,5 @@ layout: default
 </div>
 
 <div id="newsid" class="col-sm-4 nopadding-right" >
-	{% include _pages/news.html %}
+	{% include news.html %}
 </div>
