--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,19 +1,14 @@
----
-title: "News"
-layout: default
-excerpt: "hmr-lab @ UIUC"
-sitemap: false
-permalink: /news.html
----
-<h1>{{page.title}}</h1>
+<h3>News</h3>
 
 <ul class="list-unstyled">
     {% for article in site.data.news %}
         <li class="media">
             <div class="media-body">
-            <h4 class="mt-0 mb-1">{{ article.title }}</h4>
-            <p><small>{{ article.date }}</small></p>
-            {{ article.content }}
+                <div style="display: flex; justify-content: space-between;">
+                    <h4 class="mt-0 mb-1">{{ article.title }}</h4>
+                    <p><small>{{ article.date }}</small></p>
+                </div>
+                {{ article.content }}
             </div>
         </li>
     {% endfor %}
