--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -33,7 +33,7 @@ layout: default
 
 	{{ content }}
 	
-	<div id="newsid" class="col-sm-4 nopadding-right" >
+	<div id="newsid" class="col-sm-4 nopadding-right" width="100%">
 		{% include news.html %}
 	</div>
 </div>
