--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 			</div>
 		</div> -->
 		<div class="row mt-3">
-			<p class="text-center">Copyright, 2019</p>
+			<p class="text-center">Copyright © <a href="https://github.com/ericdaat/research-lab-website">Github Repository</a> 2019</p>
 		</div>
 	</div>
   </div>
