--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -31,7 +31,9 @@ layout: default
 		</a>
 	</div> -->
 
-	{{ content }}
+	<div id="contentid" class="col-sm-4 nopadding-right" width="100%">
+		{{ content }}
+	</div>
 	
 	<div id="newsid" class="col-sm-4 nopadding-right" width="100%">
 		{% include news.html %}
