fix: reduce margin?

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,11 @@ figcaption {
   margin-bottom: 20px;
 }
 
+.card-text {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
