--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div id="homeid" class="col-sm-8 ml-0 nopadding-left">
-	<!-- <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover" >
+	<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover" >
 		<ol class="carousel-indicators">
 			<li data-target="#carousel" data-slide-to="0" class="active"></li>
 			<li data-target="#carousel" data-slide-to="1"></li>
@@ -12,13 +12,10 @@ layout: default
 
 		<div class="carousel-inner" markdown="0">
 			<div class="item active">
-				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/slider-image.png" alt="Slide 1" />
+				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/groupphoto_20250423.jpg" alt="Slide 1" />
 			</div>
 			<div class="item">
-				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/slider-image.png" alt="Slide 2" />
-			</div>
-			<div class="item">
-				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/slider-image.png" alt="Slide 2" />
+				<img src="{{ site.url }}{{ site.baseurl }}/images/slider/siebelschool.jpg" alt="Slide 2" />
 			</div>
 		</div>
 		<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
@@ -29,7 +26,7 @@ layout: default
 		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 		<span class="sr-only">Next</span>
 		</a>
-	</div> -->
+	</div>
 
 	{{ content }}
 	
